# actix-auth-test

./: .env-sample  Cargo.toml  README.md  docker-compose.yml
migrations/: 20201206174955_create-tables.sql
src/: main.rs
src/config/: crypto.rs  mod.rs
src/db/: user.rs
src/errors/: mod.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/models/: user.rs
